--- a/index.html
+++ b/index.html
@@ -1,82 +1,302 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="lib/pace.min.js"></script>
-        <title>Clay Viewer</title>
-        <link rel="stylesheet" href="css/controlKit.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/iconfont/iconfont.css">
-        <link rel="stylesheet" href="lib/ion.rangeSlider/css/ion.rangeSlider.css">
-        <link rel="stylesheet" href="lib/ion.rangeSlider/css/ion.rangeSlider.skinFlat.css">
-    </head>
-    <body>
-        <div id="main">
-            <div id="viewport"></div>
-            <div id="tip">
-                Drag glTF2.0 and texture files or folder on the viewport.
-                <div class="hint">
-                    Get glTF2.0 models from
-                    <ul>
-                        <li>
-                            <a href="https://github.com/KhronosGroup/glTF-Sample-Models" target="_blank">glTF Sample Models</a>
-                        </li>
-                        <li>
-                            <a href="https://sketchfab.com/features/gltf" target="_blank">Sketchfab</a>
-                        </li>
-                    </ul>
-                </div>
-                <br />
-                <div style="font-size:16px;">
-                    <a href="https://github.com/pissang/clay-viewer/releases/">Download app</a> to support more model formats
-                </div>
-            </div>
-            <div id="credits">
-                <a href="https://github.com/pissang/clay-viewer" target="_blank" class="source">Source Code</a>
-                Built on top of
-                    <a href="https://github.com/pissang/claygl" target="_blank">ClayGL</a>,
-                    <a href="https://github.com/KhronosGroup/glTF/blob/master/specification/2.0/README.md" target="_blank">glTF2.0</a>,
-                    <a href="https://github.com/automat/controlkit.js" target="_blank">ControlKit</a>
-            </div>
-            <div id="timeline">
-                <div id="timeline-range-wrap">
-                    <div id="timeline-range">
-                        <input>
-                    </div>
-                </div>
-                <div id="timeline-progress-wrap">
-                    <div id="timeline-progress">
-                        <input>
-                    </div>
-                    <div id="timeline-pause-resume" class="iconfont icon-resume"></div>
-                </div>
-            </div>
-            <div id="background-progress">
-                <div id="background-progress-text"></div>
-                <div class="spinner"></div>
-            </div>
-        </div>
-        <div id="loading">
-            <div class="sk-folding-cube">
-                <div class="sk-cube1 sk-cube"></div>
-                <div class="sk-cube2 sk-cube"></div>
-                <div class="sk-cube4 sk-cube"></div>
-                <div class="sk-cube3 sk-cube"></div>
-            </div>
-            <div id="loading-text">LOADING</div>
-        </div>
-        <div id="toolbar">
-            <span class="iconfont icon-download" id="download" title="Download"></span>
-            <span class="iconfont icon-reset" id="reset" title="Reset"></span>
-        </div>
-        <script src="lib/controlKit.js"></script>
-        <script src="lib/FileAPI.js"></script>
-        <script src="lib/FileSaver.js"></script>
-        <script src="lib/sweetalert.min.js"></script>
-        <script src="lib/jszip.min.js"></script>
-        <script src="lib/jquery.min.js"></script>
-        <script src="lib/ion.rangeSlider.js"></script>
-        <script src="lib/browserfs.min.js"></script>
-        <script src="bundle.js"></script>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Clay Viewer + Annotation from default.json</title>
+
+  <style>
+    html, body, #viewport {
+      margin: 0; padding: 0; width: 100%; height: 100%;
+      overflow: hidden; background: #000;
+      position: relative;
+      font-family: Arial, sans-serif;
+    }
+    #viewport {
+      position: relative;
+    }
+    #annotationPopup {
+      position: absolute;
+      background: rgba(0,0,0,0.9);
+      color: white;
+      font-size: 13px;
+      padding: 10px;
+      border-radius: 5px;
+      display: none;
+      max-width: 220px;
+      pointer-events: none;
+      z-index: 1000;
+      user-select: none;
+    }
+    .annotation-label {
+      position: absolute;
+      background: rgba(0,0,0,0.6);
+      color: white;
+      padding: 3px 6px;
+      font-size: 11px;
+      border-radius: 4px;
+      pointer-events: none;
+      user-select: none;
+      white-space: nowrap;
+      font-weight: bold;
+      text-shadow: 0 0 3px black;
+    }
+  </style>
+</head>
+<body>
+  <div id="viewport"></div>
+  <div id="annotationPopup"></div>
+
+  <!-- Thư viện Three.js + loaders -->
+  <script src="lib/three.min.js"></script>
+  <script src="lib/GLTFLoader.js"></script>
+  <script src="lib/OrbitControls.js"></script>
+  <script src="lib/RGBELoader.js"></script>
+
+  <script>
+  (() => {
+    const container = document.getElementById('viewport');
+    const popup = document.getElementById('annotationPopup');
+
+    // Renderer
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(container.clientWidth, container.clientHeight);
+    renderer.outputEncoding = THREE.sRGBEncoding;
+    renderer.toneMapping = THREE.ACESFilmicToneMapping;
+    renderer.toneMappingExposure = 1.0;
+    renderer.shadowMap.enabled = true;
+    renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+    container.appendChild(renderer.domElement);
+
+    // Scene & Camera
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 500);
+    camera.position.set(3, 3, 3);
+
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.target.set(0, 1, 0);
+    controls.update();
+
+    // Ground + Grid
+    const ground = new THREE.Mesh(
+      new THREE.PlaneGeometry(100, 100),
+      new THREE.MeshStandardMaterial({ color: 0x999999, depthWrite: true })
+    );
+    ground.rotation.x = -Math.PI / 2;
+    ground.position.y = 0;
+    ground.receiveShadow = true;
+    scene.add(ground);
+
+    const gridHelper = new THREE.GridHelper(100, 100, 0x888888, 0xcccccc);
+    scene.add(gridHelper);
+
+    // Lights
+    const dirLight = new THREE.DirectionalLight(0xffffff, 1.0);
+    dirLight.position.set(10, 10, 10);
+    dirLight.castShadow = true;
+    dirLight.shadow.mapSize.width = 2048;
+    dirLight.shadow.mapSize.height = 2048;
+    dirLight.shadow.camera.near = 1;
+    dirLight.shadow.camera.far = 50;
+    dirLight.shadow.camera.left = -20;
+    dirLight.shadow.camera.right = 20;
+    dirLight.shadow.camera.top = 20;
+    dirLight.shadow.camera.bottom = -20;
+    scene.add(dirLight);
+
+    const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1.0);
+    scene.add(hemiLight);
+
+    // Variables
+    let hdrEnv = null;
+    let baseBackground = new THREE.Color('#d7d7d7');
+    let model = null;
+    let mixer = null;
+    let clock = new THREE.Clock();
+    let annotations = [];
+    const spriteList = [];
+    const animationTasks = [];
+    let isPlaying = true;
+
+    // Load HDR environment, fallback sang màu background từ default.json
+    new THREE.RGBELoader().load(
+      'hdr.hdr',
+      (hdr) => {
+        hdr.mapping = THREE.EquirectangularReflectionMapping;
+        hdrEnv = hdr;
+        scene.environment = hdrEnv;
+        scene.background = hdrEnv;
+        loadModel();
+      },
+      undefined,
+      () => {
+        // HDR load fail, lấy background từ default.json
+        fetch('default.json').then(r => r.json()).then(data => {
+          if (data.viewer?.backgroundColor) baseBackground.set(data.viewer.backgroundColor);
+          scene.background = baseBackground;
+          scene.add(new THREE.AmbientLight(0xffffff, 1));
+          loadModel();
+        });
+      }
+    );
+
+    // Load model.glb cố định (model đã có sẵn)
+    function loadModel() {
+      new THREE.GLTFLoader().load('model.glb', gltf => {
+        model = gltf.scene;
+        model.traverse(obj => {
+          if (obj.isMesh) {
+            obj.castShadow = true;
+            obj.receiveShadow = true;
+            if (obj.material) {
+              obj.material.envMapIntensity = 1.5;
+              obj.material.needsUpdate = true;
+            }
+          }
+        });
+        scene.add(model);
+
+        if (gltf.animations.length > 0) {
+          mixer = new THREE.AnimationMixer(model);
+          gltf.animations.forEach(clip => mixer.clipAction(clip).play());
+        }
+
+        // Sau khi model load xong, load annotation, sprite từ default.json
+        loadAnnotations();
+      });
+    }
+
+    // Load annotation + sprite + config từ default.json
+    function loadAnnotations() {
+      fetch('default.json').then(r => r.json()).then(json => {
+        annotations = json.annotations || [];
+
+        annotations.forEach((ann, idx) => {
+          ann.id = idx + 1;
+          const mesh = model.getObjectByName(ann.meshName);
+          if (!mesh) return;
+
+          // Tạo sprite chú thích
+          const sprite = createAnnotationSprite(ann);
+          const localPos = new THREE.Vector3(...ann.localPosition);
+          sprite.position.copy(localPos);
+          mesh.add(sprite);
+          sprite.userData = { ann, idx, mesh, localPos };
+          spriteList.push(sprite);
+
+          // Tạo nhãn DOM (label)
+          const label = document.createElement('div');
+          label.className = 'annotation-label';
+          label.innerText = `${idx + 1}. ${ann.name || 'Annotation'}`;
+          document.body.appendChild(label);
+
+          // Cập nhật vị trí label theo camera mỗi frame
+          const updateLabel = () => {
+            const worldPos = sprite.getWorldPosition(new THREE.Vector3());
+            const screenPos = worldPos.clone().project(camera);
+            const x = (screenPos.x * 0.5 + 0.5) * window.innerWidth;
+            const y = (-screenPos.y * 0.5 + 0.5) * window.innerHeight;
+            label.style.transform = `translate(-50%, -50%) translate(${x}px, ${y}px)`;
+            sprite.lookAt(camera.position);
+          };
+          animationTasks.push(updateLabel);
+
+          // Click popup info khi click sprite
+          sprite.onClick = () => {
+            const worldPos = sprite.getWorldPosition(new THREE.Vector3());
+            const screenPos = worldPos.clone().project(camera);
+            popup.style.left = `${(screenPos.x * 0.5 + 0.5) * window.innerWidth}px`;
+            popup.style.top = `${(-screenPos.y * 0.5 + 0.5) * window.innerHeight}px`;
+            popup.innerHTML = `<b>${idx + 1}. ${ann.name}</b><br/>${ann.note || ''}`;
+            popup.style.display = 'block';
+            setTimeout(() => (popup.style.display = 'none'), 4000);
+          };
+        });
+      });
+    }
+
+    // Tạo sprite circle số thứ tự annotation
+    function createAnnotationSprite(annotationData) {
+      const size = 256;
+      const canvas = document.createElement('canvas');
+      canvas.width = size;
+      canvas.height = size;
+      const ctx = canvas.getContext('2d');
+
+      const number = annotationData.id.toString();
+      const radius = size / 2 - 4;
+
+      // Vẽ vòng tròn nền cam
+      ctx.fillStyle = 'rgba(255, 80, 0, 0.9)';
+      ctx.beginPath();
+      ctx.arc(size / 2, size / 2, radius, 0, Math.PI * 2);
+      ctx.fill();
+
+      // Viền trắng
+      ctx.strokeStyle = 'white';
+      ctx.lineWidth = 2;
+      ctx.stroke();
+
+      // Số bên trong
+      ctx.fillStyle = 'white';
+      ctx.font = `bold ${size / 2.8}px Arial`;
+      ctx.textAlign = 'center';
+      ctx.textBaseline = 'middle';
+      ctx.fillText(number, size / 2, size / 2 + 1);
+
+      const texture = new THREE.CanvasTexture(canvas);
+      texture.needsUpdate = true;
+
+      const spriteMat = new THREE.SpriteMaterial({
+        map: texture,
+        sizeAttenuation: false,
+        depthTest: false,
+        transparent: true,
+        opacity: 0.95
+      });
+
+      const sprite = new THREE.Sprite(spriteMat);
+      sprite.scale.set(0.05, 0.05, 0.05);
+
+      return sprite;
+    }
+
+    // Bắt sự kiện click chuột trên canvas để kích hoạt popup annotation
+    renderer.domElement.addEventListener('click', (event) => {
+      const rect = renderer.domElement.getBoundingClientRect();
+      const mouse = new THREE.Vector2(
+        ((event.clientX - rect.left) / rect.width) * 2 - 1,
+        -((event.clientY - rect.top) / rect.height) * 2 + 1
+      );
+      const raycaster = new THREE.Raycaster();
+      raycaster.setFromCamera(mouse, camera);
+      const intersects = raycaster.intersectObjects(scene.children, true);
+      intersects.forEach(obj => obj.object.onClick?.());
+    });
+
+    // Animation loop
+    function animate() {
+      requestAnimationFrame(animate);
+
+      if (mixer && isPlaying) {
+        const delta = clock.getDelta();
+        mixer.update(delta);
+      }
+
+      animationTasks.forEach(fn => fn());
+      renderer.render(scene, camera);
+    }
+    animate();
+
+    // Resize event
+    window.addEventListener('resize', () => {
+      const w = container.clientWidth;
+      const h = container.clientHeight;
+      renderer.setSize(w, h);
+      camera.aspect = w / h;
+      camera.updateProjectionMatrix();
+    });
+  })();
+  </script>
+</body>
+</html>
